practice more js

--- a/js/zoo-loop-unsolved.html
+++ b/js/zoo-loop-unsolved.html
@@ -12,6 +12,7 @@
 
       // Array of zoo animals.
       var zooAnimals = ["Zebra", "Rhino", "Giraffe", "Owl"];
+      var vacationDestinations = ["Hawaii", "Berkeley", "London", "Fuji", "Bangkok"];
 
       // Rewrite the following code to print all of the animals using a for-loop.
       // console.log(zooAnimals[0]);
@@ -34,6 +35,8 @@
       }
 
       logArray(zooAnimals);
+      logArray(vacationDestinations);
+
 
     </script>
     
