--- a/js/gandalf-the-grey-objects.html
+++ b/js/gandalf-the-grey-objects.html
@@ -9,6 +9,7 @@
 <body>
   <script type="text/javascript">
     var gandalf = {
+      //object{ "property": value}  scope of the object is defined within the curly brackets
       "real name": "Gandalf",
       "age (est)": 11000,
       "race": "Maia",
@@ -19,8 +20,18 @@
         "Mithrandir",
         "Gandalf the Grey",
         "Gandalf the White"
-      ]
+      ],
+     "offerAnAlias": function(index){
+      return this.aliases[index];
+     },
+     "referToMyself":function(){
+      alert("I am "+ this.offerAnAlias(Math.floor(Math.random()*5)))
+     }
     }
+
+    gandalf.referToMyself();
+    gandalf.referToMyself();
+    gandalf.referToMyself();
 
     // Object properties can be accessed with "bracket notation"
     alert("My name is " + gandalf["real name"]);
