--- a/js/scope-examples.html
+++ b/js/scope-examples.html
@@ -26,10 +26,10 @@
 			return exposed + message
 		}
 
-		var message = thirdFunction('oh my!')
-		console.log(message)
+		// var message = thirdFunction('oh my!')
+		// console.log(message)
 
-		v
+		// v
 	</script>
 
 </body>
